--- a/frontend/src/app/global.css
+++ b/frontend/src/app/global.css
@@ -80,6 +80,6 @@
     max-height: var(--radix-popover-content-available-height);
   }
   .grid-repeat-auto-fill-min-max {
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(min(100%, 200px), 1fr));
   }
 }
